@@ -1,3 +1,10 @@
+2014-12-29  Michael R. Crusoe  <mcrusoe@msu.edu>
+
+    * khmer/_khmermodule.cc: convert C++ out of memory exceptions to Python
+    out of memory exception.
+    * test/test_{counting_hash,counting_single,hashbits_obj,labelhash,
+    scripts}.py: partial tests for the above
+
 2014-12-26  Titus Brown  <titus@idyll.org>
 
     * tests/tests_sandbox_scripts.py: added import and execfile test for all
